Update Day 4. Binomial Distribution.ipynb

--- a/10 Days of Statistics/Day 4. Binomial Distribution.ipynb
+++ b/10 Days of Statistics/Day 4. Binomial Distribution.ipynb
@@ -11,9 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\begin{array}{*{20}{c}}\n",
-    "{f\\left( x \\right) = {p^x}{{\\left( {1 - p} \\right)}^{1 - x}}}&{\\textrm{for }x \\in \\left\\{ {0,1} \\right\\}}\n",
-    "\\end{array}$$ "
+    "$${f\\left( x \\right) = {p^x}{{\\left( {1 - p} \\right)}^{1 - x}}}&{\\textrm{for }x \\in \\left\\{ {0,1} \\right\\}}$$"
    ]
   },
   {
